--- a/interactivemap.css
+++ b/interactivemap.css
@@ -89,3 +89,29 @@ div.olControlZoom a:hover {
 .maximizeDiv {
     transform: rotate(90deg);
 }
+
+@media screen and (max-width: 768px) {
+    div.olControlZoom a {
+        width: 50px;
+        height: 50px;
+        line-height: 50px;
+    }
+    .controls-container {
+        top:150px;
+    }
+    #controls-list {
+        padding: 3px 10px 5px 50px;
+    }
+    #controls-min, #controls-max, .olControlLayerSwitcher .maximizeDiv, .olControlLayerSwitcher .minimizeDiv {
+        width: 50px;
+        height: 50px;
+    }
+    #OpenLayers_Control_MaximizeDiv_innerImage, #OpenLayers_Control_MinimizeDiv_innerImage {
+        width: 100%;
+        height: 100%;
+    }
+    .labelSpan.olButton {
+        width: 80%;
+        display: inline-block;
+    }
+}
