control list style tweaks

--- a/www/interactivemap.css
+++ b/www/interactivemap.css
@@ -24,12 +24,14 @@ img[src="img/ward_observer.png"]:hover, img[src="img/ward_sentry.png"]:hover {
 }
 #controls-list li{
 	padding:0px 5px;
+    margin: 5px 3px 5px 4px;
 }
 #controls-list #dataControl-container{
     margin-top: 3px;
 }
-#controls-list #dataControl-label{
-	margin-left: 25px;
+#controls-list input {
+    margin: 0;
+    vertical-align: bottom;
 }
 #output-panel {
 	padding:5px 10px 5px 25px;
