--- a/www/interactivemap.css
+++ b/www/interactivemap.css
@@ -6,6 +6,15 @@ body {
 img[src="img/ward_observer.png"]:hover, img[src="img/ward_sentry.png"]:hover {
     cursor:pointer;
 }
+input[type=number], input[type=button], select {
+    border-radius: 4px;
+    border: 1px solid black;
+    padding: 2px;
+    margin-bottom: 2px;
+}
+select {
+    padding: 1px;
+}
 #map {
     width: 100%;
     height: 100%;
