--- a/www/interactivemap.css
+++ b/www/interactivemap.css
@@ -6,7 +6,7 @@ body {
 img[src="img/ward_observer.png"]:hover, img[src="img/ward_sentry.png"]:hover {
     cursor:pointer;
 }
-input[type=number], input[type=button], select {
+input[type=text], input[type=number], input[type=button], select {
     border-radius: 4px;
     border: 1px solid black;
     padding: 2px;
@@ -108,7 +108,6 @@ li.collapsed ul {
 }
 #movespeed {
     width: 40px;
-    padding: 0px;
     text-align: right;
 }
 #movespeed-container {
@@ -122,6 +121,7 @@ li.collapsed ul {
     background-color: white;
     color: black;
     padding: 3px 5px;
+    z-index: 9999;
 }
 
 div.olControlZoom a {
