--- a/www/app.css
+++ b/www/app.css
@@ -53,6 +53,7 @@ hr {
     background-color: white;
     margin: 10px;
     box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.5);
+    line-height: 22px;
 }
 .notification-content {
     padding: 6px 10px;
