--- a/www/app.css
+++ b/www/app.css
@@ -4,6 +4,7 @@ html, body, #map {
     padding: 0;
     margin: 0;
     font-family: sans-serif;
+    z-index: 0;
 }
 body {
     overflow-y: hidden;
@@ -11,223 +12,6 @@ body {
 hr {
     border-color: #111;
     margin: 0;
-}
-
-#notification {
-    position: absolute;
-    top: 0px;
-    width: calc(100% - 120px);
-    transition: 0.5s;
-    text-align: center;
-    margin-left: 60px;
-    z-index: 2;
-}
-
-#info {
-    position: absolute;
-    bottom: 0px;
-    width: 100%;
-    transition: 0.5s;
-}
-#info.slideUp {
-    -webkit-transform: translateY(0%);
-    transform: translateY(0%);
-}
-#info.slideDown {
-    transition-delay: 0.5s;
-    -webkit-transform: translateY(100%);
-    transform: translateY(100%);
-}
-#notification.slideUp {
-    -webkit-transform: translateY(-100%);
-    transform: translateY(-100%);
-}
-#notification.slideDown {
-    -webkit-transform: translateY(0%);
-    transform: translateY(0%);
-}
-.info-content,
-.notification-content {
-    padding: 10px;
-    border-radius: 10px;
-    background-color: white;
-    margin: 10px;
-    box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.5);
-    line-height: 22px;
-}
-.notification-content {
-    padding: 6px 10px;
-    line-height: 24px;
-    color: #818181;
-    margin: 10px 0px;
-    background-color: #111;
-}
-.notification-content span {
-    display: block;
-}
-.info-header {
-    font-weight: bold;
-    margin-bottom: 5px;
-}
-.info-line {
-    margin-bottom: 5px;
-}
-.info-line:last-child {
-    margin-bottom: 0;
-}
-.pos-left {
-    left: 0;
-}
-.pos-right {
-    right: 0;
-}
-
-.menu-panel {
-    height: 100%;
-    width: 100%;
-    max-width: 250px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-}
-
-.btn.collapsed-horizontal,
-.menu-panel.collapsed-horizontal {
-    width: 0;
-    transition: 0.2s;
-}
-.btn.collapsed-horizontal:before {
-    display: none;
-}
-
-.menu-panel.expand-horizontal {
-    width: 250px;
-    transition-delay: 0.2s;
-}
-
-.hidden,
-.btn.hidden,
-.menu-panel .menu-item label.hidden {
-    display: none;
-}
-
-.collapsed {
-    max-height: 0;
-    transition: 0.3s;
-    overflow: hidden;
-}
-
-.menu-item {
-    position: relative;
-}
-
-.menu-item.header,
-.menu-item label,
-.menu-item input,
-.menu-item select {
-    padding: 8px 8px 8px 24px;
-    text-decoration: none;
-    font-size: 20px;
-    display: block;
-    transition: 0.3s;
-    white-space: nowrap;
-    width: 100%;
-    background-color: #111;
-    border: 0;
-    color: #818181;
-    box-sizing: border-box;
-}
-
-.menu-item input[type=radio],
-.menu-item input[type=checkbox] {
-    display: none;
-}
-
-.menu-item input[type=radio]:checked + .checkbox,
-.menu-item input[type=checkbox]:checked + .checkbox {
-    background-color: #818181;
-    color: #111;
-}
-
-.menu-item input[type=radio].inverse + .checkbox,
-.menu-item input[type=checkbox].inverse + .checkbox {
-    background-color: #1b1a1a;
-}
-.menu-item input[type=radio].inverse + .checkbox:hover,
-.menu-item input[type=checkbox].inverse + .checkbox:hover {
-    background-color: #111;
-    color: #f1f1f1;
-}
-.menu-item input[type=radio].inverse:checked + .checkbox,
-.menu-item input[type=checkbox].inverse:checked + .checkbox {
-    background-color: #111;
-    color: #f1f1f1;
-}
-
-.menu-item .checkbox:hover,
-.menu-item input[type=radio]:checked + .checkbox:hover,
-.menu-item input[type=checkbox]:checked + .checkbox:hover {
-    color: #f1f1f1;
-}
-
-.menu-item input[type=button] {
-    border: 1px solid #818181;
-}
-
-.menu-item input[type=button]:active {
-    background-color: #818181;
-    color: #f1f1f1;
-}
-
-.menu-item .text-label,
-.menu-item .select-label,
-.menu-item .text-label + input,
-.menu-item .select-label + select {
-    width: 50%;
-    display: inline-block;
-    box-sizing: border-box;
-}
-
-.menu-item .sub-menu {
-    max-height: 0;
-    transition: 0.3s;
-    overflow: hidden;
-}
-
-.menu-item input:checked + .checkbox {
-    max-height: 999px;
-    display: block;
-}
-.menu-item input:checked + .checkbox + .sub-menu {
-    max-height: 999px;
-    display: block;
-}
-
-.menu-item-group .menu-item.inline {
-    width: 50%;
-    display: inline-block;
-    box-sizing: border-box;
-    text-align: center;
-}
-
-.menu-item-group .menu-item label,
-.menu-item-group .menu-item input,
-.menu-item-group .menu-item select {
-    padding: 8px;
-}
-
-.menu-item-group.sub-menu .menu-item label {
-    padding-left: 48px;
-}
-.menu-item-group.sub-menu .menu-item.inline label {
-    padding-left: 8px;
-}
-.menu-item-group.sub-menu .menu-item .menu-item-group.sub-menu .menu-item label {
-    padding-left: 64px;
 }
 
 .btn {
@@ -244,145 +28,19 @@ hr {
 .btn:hover {
     font-size: 46px;
 }
-#info-close-btn {
-    font-size: 36px;
-    width: 36px;
-    height: 36px;
-    line-height: 36px;
-    border-radius: 10px;
-    margin: 10px;
-    background-color: #fff;
-}
-#info:not(.active) #info-close-btn {
-    display: none;
-}
 
 .close.btn, .back.btn, .open.btn {
     position: absolute;
     top: 0;
 }
+.open.btn {
+    z-index: 40;
+}
+.close.btn {
+    z-index: 30;
+}
 .back.btn {
     font-size: 36px;
-}
-#tool-btn-container {
-    position: absolute;
-    top: 50px;
-    width: 50px;
-    background-color: #888;
-}
-.tool.btn {
-    height: 36px;
-}
-.tool.btn:active,
-.tool.btn.active {
-    -webkit-transform: scale(0.9);
-    transform: scale(0.9);
-}
-
-#btn-tree {
-    background-image: url('img/btn-quelling_blade.png');
-}
-#btn-ward[ward-type="observer"] {
-    background-image: url('img/ward_dispenser_observer.png');
-}
-#btn-ward[ward-type="sentry"] {
-    background-image: url('img/ward_dispenser_sentry.png');
-}
-#btn-zoom-in,
-#btn-zoom-out {
-    line-height: 36px;
-    font-size: 36px;
-}
-#btn-zoom-in:hover,
-#btn-zoom-out:hover  {
-    font-size: 32px;
-}
-
-#menu-left-open-btn,
-#menu-right-open-btn-group {
-    position: absolute;
-    top: 0;
-}
-#menu-left-open-btn {
-    left: 0;
-    width: 50px;
-    height: 50px;
-}
-#menu-right-open-btn:before {
-    content: "";
-    position: absolute;
-    left: 10px;
-    top: 15px;
-    width: 30px;
-    height: 4px;
-    background: #818181;
-    box-shadow: 
-        0 8px 0 0 #818181,
-        0 16px 0 0 #818181;
-}
-#menu-right-open-btn:hover:before {
-    -webkit-transform: scale(0.9);
-    transform: scale(0.9);
-}
-
-input:not(:checked) + .back.btn,
-input:checked + .back.btn + .back-group .menu-contents .menu-item label.hidden {
-    display: block;
-    max-height: 999px;
-}
-
-@media screen and (min-width: 768px) {
-    .menu-panel {
-      width: 250px;
-    }
-    .menu-panel.expand-horizontal {
-      width: 250px;
-    }
-    .menu-contents.hidden {
-        display: block;
-    }
-    #marker-menu-open-btn,
-    #base-menu-open-btn {
-        display: none;
-    }
-    #notification,
-    #info {
-        width: 500px;
-        left: 50%;
-        margin-left: 0px;
-        -webkit-transform: translateX(-50%);
-        transform: translateX(-50%);
-    }
-    #info.slideUp {
-        -webkit-transform: translateX(-50%) translateY(0%);
-        transform: translateX(-50%) translateY(0%);
-    }
-    #info.slideDown {
-        -webkit-transform: translateX(-50%) translateY(100%);
-        transform: translateX(-50%) translateY(100%);
-    }
-    #notification.slideUp {
-        -webkit-transform: translateX(-50%) translateY(-100%);
-        transform: translateX(-50%) translateY(-100%);
-    }
-    #notification.slideDown {
-        -webkit-transform: translateX(-50%) translateY(0%);
-        transform: translateX(-50%) translateY(0%);
-    }
-}
-
-@media screen and (min-height: 768px) {
-    .menu-panel .menu-item label.hidden {
-        display: block;
-        max-height: 999px;
-    }
-    input:not(:checked) + .back.btn {
-        display: none;
-    }
-    .notification-content span {
-        display: inline-block;
-    }
-    .notification-content span + span {
-        margin-left: 10px;
-    }
+    right: 200px;
+    z-index: 30;
 }
