--- a/www/gear.css
+++ b/www/gear.css
@@ -12,7 +12,7 @@
     -moz-animation: rotate 0.5s ease-out 1;
     animation: rotate 0.5s ease-out 1;
 }
-.gear:before, .gear:after {
+.gear::before, .gear::after {
     height: 4px;
     width: 4px;
     content: '';
@@ -20,11 +20,11 @@
     position: absolute;
     background: dimgray;
 }
-.gear:before {
+.gear::before {
     box-shadow: 10px 10px 0 0 dimgray, -10px 10px 0 0 dimgray, 0 20px 0 0 dimgray;
     top: -2px; left: 8px;
 }
-.gear:after {
+.gear::after {
     transform: rotate(45deg);
     top: 1px; left: 15px;
     box-shadow: 0px 20px 0 0 dimgray, 10px 10px 0 0 dimgray, -10px 10px 0 0 dimgray;
